amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members-extension.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members-extension.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 3

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-union-members
  Message: All union members must be Object type, Interface it's not
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members-extension.api.graphql#/declares/union/SearchResult/or/union/SearchResult_1
  Property: http://a.ml/vocabularies/shapes#anyOf
  Range: [(23,0)-(23,13)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-union-members
  Message: All union members must be Object type, Scalar it's not
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members-extension.api.graphql#/declares/union/SearchResult/or/union/SearchResult_1
  Property: http://a.ml/vocabularies/shapes#anyOf
  Range: [(23,0)-(23,13)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-union-members
  Message: All union members must be Object type, Union it's not
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members-extension.api.graphql#/declares/union/SearchResult/or/union/SearchResult_1
  Property: http://a.ml/vocabularies/shapes#anyOf
  Range: [(23,0)-(23,13)]
  Location: 
